--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
+    "scripts": "^0.1.0",
     "storybook": "^7.0.18",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
